--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
       <div class="skills-charts">
         <div id="myCanvasContainer">
-          <canvas width="500" height="500" id="myCanvas">
+          <canvas height="500" id="myCanvas">
             <ul id="tags">
               <li><a href="#" target="_blank">HTML</a></li>
               <li><a href="#" target="_blank">CSS</a></li>
