--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
               <li><a href="#" target="_blank">Python</a></li>
               <li><a href="#" target="_blank">Node JS</a></li>
               <li><a href="#" target="_blank">Git</a></li>
-              <li><a href="#" target="_blank">JQuery</a></li>
-              <li><a href="#" target="_blank">SQL</a></li>
+              <li><a href="#" target="_blank">MySQL</a></li>
               <li><a href="#" target="_blank">Express js</a></li>
               <li><a href="#" target="_blank">C/C++</a></li>
             </ul>
